renamed team names

--- a/src/main/resources/msgs/TeamKey_en.properties
+++ b/src/main/resources/msgs/TeamKey_en.properties
@@ -216,28 +216,28 @@ team.FC_PORTO=FC Porto
 team.INTER_MIAMI=Inter Miami
 team.MANCHESTER_CITY=Manchester City
 team.PALMEIRAS=Palmeiras
-team.PARIS_SAINT_GERMAIN=Paris Saint Germain
+team.PARIS_SAINT_GERMAIN=Paris SG
 team.SEATLE_SOUNDERS=Seattle Sounders
-team.AL_AIN_FC=Al Ain FC
+team.AL_AIN_FC=Al Ain
 team.AL_HILAL=Al Hilal
 team.AUCKLAND_CITY=Auckland City
 team.BAYERN_MUENCHEN=Bayern M\u00FCnchen
 team.BENFICA_LISSABON=Benfica Lissabon
 team.BOCA_JUNIORS=Boca Juniors
 team.BORUSSIA_DORTMUND=Borussia Dortmund
-team.CA_RIVER_PLATE_MONTEVIDEO=CA RP Montevideo
-team.CF_MONTERREY=CF Monterrey
-team.CF_PACHUCA=CF Pachuca
-team.CHELSEA_CREST=Chelsea Crest
+team.CA_RIVER_PLATE_MONTEVIDEO=River Plate
+team.CF_MONTERREY=Monterrey
+team.CF_PACHUCA=Pachuca
+team.CHELSEA_CREST=Chelsea
 team.CLUB_LEON=Club Leon
-team.CR_FLAMENGO=CF Flamengo
-team.ESPERANCE_SPORTIVE_TUNIS=Esperance Sportive Tunis
-team.FC_INTERNAZIONALE_MILANO=FC Inter. Milano
-team.FC_SALZBURG=FC Salzburg
-team.FLUMINENSE_FC=Fluminense FC
-team.JUVENTUS_FC=Juventus FC
-team.MAMELODI_SUNDOWNS_FC=Mamelodi Sundowns FC
+team.CR_FLAMENGO=Flamengo
+team.ESPERANCE_SPORTIVE_TUNIS=ES Tunis
+team.FC_INTERNAZIONALE_MILANO=Inter Mailand
+team.FC_SALZBURG=RB Salzburg
+team.FLUMINENSE_FC=Fluminense
+team.JUVENTUS_FC=Juventus
+team.MAMELODI_SUNDOWNS_FC=Mamelodi Sundowns
 team.REAL_MADRID=Real Madrid
-team.ULSAN_HD=Ulsan HD
-team.URAWA_RED_DIAMONDS=Urawa Red Diamonds
-team.WYDAD_CASABLANCA=Wydad Casablanca
+team.ULSAN_HD=Ulsan
+team.URAWA_RED_DIAMONDS=Urawa Reds
+team.WYDAD_CASABLANCA=Wydad AC
