changed team favourite

--- a/src/main/resources/msgs/TranslationMessages_ca.properties
+++ b/src/main/resources/msgs/TranslationMessages_ca.properties
@@ -37,7 +37,7 @@ administration.runtime.configuration.enableChangingUsername.tooltip = Els usuari
 administration.runtime.configuration.enabledParentChildRanking = Classificaci\u00F3 separada
 administration.runtime.configuration.enabledParentChildRanking.tooltip = Classificaci\u00F3 separada de pares i fills
 points.config.extraBetPoints = Punts per a apostes de bonificaci\u00F3
-administration.runtime.configuration.favouriteCountry = Pa\u00EDs Preferit
+administration.runtime.configuration.favouriteCountry=Equip preferit
 administration.runtime.configuration.joker = Configuraci\u00F3 Joker-Aposta
 administration.runtime.configuration.jokerMaxCount.title = max. Joker Count
 administration.runtime.configuration.passwordForReset = Contrasenya usada despr\u00E9s del restabliment de contrasenya
@@ -189,8 +189,7 @@ login.placeholder.password = Contrasenya
 login.placeholder.username = Nom d'usuari
 login.title = Iniciar sessi\u00F3
 login.title.short = Iniciar sessi\u00F3
-
-matches.form.chooseCountry = Selecci\u00F3 del pa\u00EDs
+matches.form.chooseCountry=Selecci\u00F3 d'equip
 matches.form.group = Grup
 matches.form.kickOff = Hora i dia del partit
 matches.form.result = Resultat
@@ -267,7 +266,7 @@ ranking.noRankings = No hi ha cap aposta assignada!
 rules.title = Regles
 
 statistics.legend.bonusPoints = Punts de bonificaci\u00F3
-statistics.legend.favouriteCountry = Pa\u00EDs-Preferit
+statistics.legend.favouriteCountry=Equip preferit
 statistics.legend.flopBetter = Pitjor (\u00DAltim)
 statistics.legend.topBetter = Millor (primer)
 statistics.title=Estad\u00EDstica de punts
