--- a/src/main/resources/msgs/TranslationMessages_cs.properties
+++ b/src/main/resources/msgs/TranslationMessages_cs.properties
@@ -37,7 +37,7 @@ administration.runtime.configuration.enableChangingUsername.tooltip = U\u017Eiva
 administration.runtime.configuration.enabledParentChildRanking = Samostatn\u00E9 \u0159azen\u00ED
 administration.runtime.configuration.enabledParentChildRanking.tooltip = Odd\u011Blen\u00E9 \u0159azen\u00ED rodi\u010D\u016F a d\u011Bt\u00ED
 points.config.extraBetPoints = Body za bonusov\u00E9 s\u00E1zky
-administration.runtime.configuration.favouriteCountry = Obl\u00EDben\u00E1 zem\u011B
+administration.runtime.configuration.favouriteCountry=Obl\u00EDben\u00FD t\u00FDm
 administration.runtime.configuration.joker = Konfigurace \u017Eol\u00EDk\u016F
 administration.runtime.configuration.jokerMaxCount.title = Maxim\u00E1ln\u00ED po\u010Det \u017Eol\u00EDk\u016F
 administration.runtime.configuration.passwordForReset = Pou\u017Eit\u00E9 heslo po obnoven\u00ED hesla
@@ -192,8 +192,7 @@ login.placeholder.password = Heslo
 login.placeholder.username = U\u017Eivatelsk\u00E9 jm\u00E9no
 login.title = P\u0159ihl\u00E1\u0161en\u00ED
 login.title.short = Login
-
-matches.form.chooseCountry = V\u00FDb\u011Br zem\u011B
+matches.form.chooseCountry=V\u00FDb\u011Br t\u00FDmu
 matches.form.group = skupina
 matches.form.kickOff = Kick-Off
 matches.form.result = result
@@ -270,7 +269,7 @@ ranking.noRankings = \u017D\u00E1dn\u00E9 s\u00E1zky nejsou p\u0159i\u0159azeny!
 rules.title = Pravidla
 
 statistics.legend.bonusPoints = Bonusov\u00E9 body
-statistics.legend.favouriteCountry = Obl\u00EDben\u00E1 zem\u011B
+statistics.legend.favouriteCountry=Obl\u00EDben\u00FD t\u00FDm
 statistics.legend.flopBetter = Flop-Better
 statistics.legend.topBetter = Top-Better
 statistics.title=Statistika bod\u016F
