--- a/src/main/resources/msgs/TranslationMessages_de.properties
+++ b/src/main/resources/msgs/TranslationMessages_de.properties
@@ -37,7 +37,7 @@ administration.runtime.configuration.enableChangingUsername.tooltip      = Benut
 administration.runtime.configuration.enabledParentChildRanking           = getrenntes Ranking
 administration.runtime.configuration.enabledParentChildRanking.tooltip   = getrenntes Erwachsenen- und Kinder-Ranking
 points.config.extraBetPoints                      = Punkte f\u00FCr Bonus Tipps
-administration.runtime.configuration.favouriteCountry                    = L\u00E4nder-Favorit
+administration.runtime.configuration.favouriteCountry=Team-Favorit
 administration.runtime.configuration.joker                               = Konfiguration Joker-Tipp
 administration.runtime.configuration.jokerMaxCount.title                 = max. Anzahl Joker
 administration.runtime.configuration.passwordForReset                    = Passwort nach Passwort-Reset
@@ -193,8 +193,7 @@ login.placeholder.password = Passwort
 login.placeholder.username = Benutzername
 login.title                = Anmelden
 login.title.short          = Anmelden
-
-matches.form.chooseCountry = L\u00E4nderauswahl
+matches.form.chooseCountry=Teamauswahl
 matches.form.group         = Gruppe
 matches.form.kickOff       = Ansto\u00DF
 matches.form.result        = Ergebnis
@@ -272,7 +271,7 @@ ranking.noRankings = Es wurden noch keine Tipps abgegeben!
 rules.title = Regeln
 
 statistics.legend.bonusPoints      = Bonus-Punkte
-statistics.legend.favouriteCountry = L\u00E4nder-Favorit
+statistics.legend.favouriteCountry=Team-Favorit
 statistics.legend.flopBetter       = Flop-Tipper
 statistics.legend.topBetter        = Top-Tipper
 statistics.title                   = Punkte-Statistik
