--- a/src/main/resources/msgs/TranslationMessages_en.properties
+++ b/src/main/resources/msgs/TranslationMessages_en.properties
@@ -37,7 +37,7 @@ administration.runtime.configuration.enableChangingUsername.tooltip      = Users
 administration.runtime.configuration.enabledParentChildRanking           = separate ranking
 administration.runtime.configuration.enabledParentChildRanking.tooltip   = separated parent and child ranking
 points.config.extraBetPoints                      = Points for bonus bets
-administration.runtime.configuration.favouriteCountry                    = Country Favourite
+administration.runtime.configuration.favouriteCountry=Team Favourite
 administration.runtime.configuration.joker                               = Configuration Joker-Bet
 administration.runtime.configuration.jokerMaxCount.title                 = max. Joker Count
 administration.runtime.configuration.passwordForReset                    = Used password after password reset
@@ -192,8 +192,7 @@ login.placeholder.password = Password
 login.placeholder.username = Username
 login.title                = Login
 login.title.short          = Login
-
-matches.form.chooseCountry = Country selection
+matches.form.chooseCountry=Team selection
 matches.form.group         = group
 matches.form.kickOff       = Kick-Off
 matches.form.result        = result
@@ -270,7 +269,7 @@ ranking.noRankings = No bets assigned!
 rules.title = Rules
 
 statistics.legend.bonusPoints      = Bonus Points
-statistics.legend.favouriteCountry = Country-Favourite
+statistics.legend.favouriteCountry=Team Favourite
 statistics.legend.flopBetter       = Flop-Better
 statistics.legend.topBetter        = Top-Better
 statistics.title=Points Statistic
