--- a/src/main/resources/msgs/TranslationMessages_es.properties
+++ b/src/main/resources/msgs/TranslationMessages_es.properties
@@ -37,7 +37,7 @@ administration.runtime.configuration.enableChangingUsername.tooltip      = Los u
 administration.runtime.configuration.enabledParentChildRanking           = Clasificaci\u00F3n separada
 administration.runtime.configuration.enabledParentChildRanking.tooltip   = Clasificaci\u00F3n separada de padres e hijos
 points.config.extraBetPoints                      = Puntos para apuestas de bonificaci\u00F3n
-administration.runtime.configuration.favouriteCountry                    = Pa\u00EDs Favorito
+administration.runtime.configuration.favouriteCountry=Favorito del equipo
 administration.runtime.configuration.joker                               = Configuraci\u00F3n Joker-Apuesta
 administration.runtime.configuration.jokerMaxCount.title                 = max. Joker Count
 administration.runtime.configuration.passwordForReset                    = Contrase\u00F1a usada despu\u00E9s del restablecimiento de contrase\u00F1a
@@ -192,8 +192,7 @@ login.placeholder.password = Contrase\u00F1a
 login.placeholder.username = Nombre de usuario
 login.title                = Iniciar sesi\u00F3n
 login.title.short          = Iniciar sesi\u00F3n
-
-matches.form.chooseCountry = Selecci\u00F3n de pa\u00EDs
+matches.form.chooseCountry=Selecci\u00F3n de equipo
 matches.form.group         = Grupo
 matches.form.kickOff       = Hora y d\u00EDa del partido
 matches.form.result        = Resultado
@@ -270,7 +269,7 @@ ranking.noRankings = \u00A1No hay apuestas asignadas!
 rules.title = Reglas
 
 statistics.legend.bonusPoints      = Puntos de bonificaci\u00F3n
-statistics.legend.favouriteCountry = Peor (\u00FAltimo)
+statistics.legend.favouriteCountry=Favorito del equipo
 statistics.legend.flopBetter       = Mejor (primero)
 statistics.legend.topBetter        = Top-Mejor
 statistics.title=Estad\u00EDstica de puntos
