--- a/src/main/resources/msgs/TranslationMessages_sv.properties
+++ b/src/main/resources/msgs/TranslationMessages_sv.properties
@@ -37,7 +37,7 @@ administration.runtime.configuration.enableChangingUsername.tooltip      = M\u00
 administration.runtime.configuration.enabledParentChildRanking           = Separat ranking
 administration.runtime.configuration.enabledParentChildRanking.tooltip   = Separat ranking f\u00F6r vuxna och barn
 points.config.extraBetPoints                      = Po\u00E4ng f\u00F6r bonustips
-administration.runtime.configuration.favouriteCountry                    = Favoritland
+administration.runtime.configuration.favouriteCountry=Lagfavorit
 administration.runtime.configuration.joker                               = Konfiguration Jokertips
 administration.runtime.configuration.jokerMaxCount.title                 = Max antal jokrar
 administration.runtime.configuration.passwordForReset                    = Standardl\u00F6senord efter l\u00F6senords\u00E5terst\u00E4llning
@@ -191,8 +191,7 @@ login.placeholder.password = L\u00F6senord
 login.placeholder.username = Anv\u00E4ndarnamn
 login.title                = Logga in
 login.title.short          = Logga in
-
-matches.form.chooseCountry = V\u00E4lj landslag
+matches.form.chooseCountry=Lagval
 matches.form.group         = Grupp
 matches.form.kickOff       = Avspark
 matches.form.result        = Resultat
@@ -269,7 +268,7 @@ ranking.noRankings = Inga tips gjorda!
 rules.title = Regler
 
 statistics.legend.bonusPoints      = Bonuspo\u00E4ng
-statistics.legend.favouriteCountry = Favoritland
+statistics.legend.favouriteCountry=Lagfavorit
 statistics.legend.flopBetter       = Flopptippare
 statistics.legend.topBetter        = Topptippare
 statistics.title                   = Po\u00E4ngstatistik
