--- a/src/main/resources/msgs/TranslationMessages_pl.properties
+++ b/src/main/resources/msgs/TranslationMessages_pl.properties
@@ -37,7 +37,7 @@ administration.runtime.configuration.enableChangingUsername.tooltip      = U\u01
 administration.runtime.configuration.enabledParentChildRanking           = Osobne rankingi
 administration.runtime.configuration.enabledParentChildRanking.tooltip   = Osobne rankingi dla rodzic\u00F3w i dzieci
 points.config.extraBetPoints                      = Punkty za bonusowe zak\u0142ady
-administration.runtime.configuration.favouriteCountry                    = Ulubiony kraj
+administration.runtime.configuration.favouriteCountry=Ulubiony zesp\u00F3\u0142
 administration.runtime.configuration.joker                               = Konfiguracja Joker\u00F3w
 administration.runtime.configuration.jokerMaxCount.title                 = Maksymalna liczba Joker\u00F3w
 administration.runtime.configuration.passwordForReset                    = Has\u0142o ustawione po zresetowaniu
@@ -192,8 +192,7 @@ login.placeholder.password = Has\u0142o
 login.placeholder.username = Nazwa u\u017Cytkownika
 login.title                = Zaloguj
 login.title.short          = Zaloguj
-
-matches.form.chooseCountry = Wybierz kraj
+matches.form.chooseCountry=Wyb\u00F3r zespo\u0142u
 matches.form.group         = grupa
 matches.form.kickOff       = Kick-Off
 matches.form.result        = wyniki
@@ -271,7 +270,7 @@ ranking.noRankings = Brak przypisanych typowa\u0144
 rules.title = Rules
 
 statistics.legend.bonusPoints      = Bonusowe punkty
-statistics.legend.favouriteCountry = Ulubiony kraj
+statistics.legend.favouriteCountry=Ulubiony zesp\u00F3\u0142
 statistics.legend.flopBetter       = Flop-Better
 statistics.legend.topBetter        = Top-Better
 statistics.title                   = Statystyki punkt\u00F3w
