add french translation

--- a/src/main/resources/msgs/TranslationMessages_ca.properties
+++ b/src/main/resources/msgs/TranslationMessages_ca.properties
@@ -180,6 +180,7 @@ language.de=alemany
 language.en=angl\u00E8s
 language.pl=polon\u00E8s
 language.es=espa\u00F1ol
+language.fr=franc\u00e8s
 lastlogins.title = \u00DAltims inicis de sessi\u00F3 dels usuaris
 
 login.autologin.tooltip = Amb l'inici de sessi\u00F3 autom\u00E0tic habilitat, no heu de tornar a iniciar sessi\u00F3 si la sessi\u00F3 de l'usuari ha expirat.
