--- a/src/main/resources/msgs/TranslationMessages_cs.properties
+++ b/src/main/resources/msgs/TranslationMessages_cs.properties
@@ -182,6 +182,7 @@ language.de = n\u011Bm\u010Dina
 language.en = angli\u010Dtina
 language.pl = pol\u0161tina
 language.cs = \u010De\u0161tina
+language.fr = francouz\u0161tina
 
 lastlogins.title = Posledn\u00ED p\u0159ihl\u00E1\u0161en\u00ED u\u017Eivatel\u016F
 
