--- a/src/main/resources/msgs/TranslationMessages_de.properties
+++ b/src/main/resources/msgs/TranslationMessages_de.properties
@@ -183,6 +183,7 @@ language.de = deutsch
 language.en = englisch
 language.pl = polnisch
 language.cs = tschechisch
+language.fr = französisch
 
 lastlogins.title = Letzte Logins der Benutzer
 
