--- a/src/main/resources/msgs/TranslationMessages_en.properties
+++ b/src/main/resources/msgs/TranslationMessages_en.properties
@@ -182,6 +182,7 @@ language.de = german
 language.en = english
 language.pl = polish
 language.cs = czech
+language.fr = french
 
 lastlogins.title = Last logins of users
 
