--- a/src/main/resources/msgs/TranslationMessages_es.properties
+++ b/src/main/resources/msgs/TranslationMessages_es.properties
@@ -182,6 +182,7 @@ language.pl=polaco
 language.es=espa\u00F1ol
 language.ca=catal\u00E0
 language.cs=checo
+language.fr=franc\u00e9s
 
 lastlogins.title = \u00DAltimos inicios de sesi\u00F3n de los usuarios
 
