--- a/src/main/resources/msgs/TranslationMessages_pl.properties
+++ b/src/main/resources/msgs/TranslationMessages_pl.properties
@@ -182,6 +182,7 @@ language.de = niemiecki
 language.en = angielski
 language.pl = polski
 language.cs = czeski
+language.fr = francuski
 
 lastlogins.title = Ostatnie logowania u\u017Cytkownik\u00F3w
 
