--- a/src/main/resources/msgs/TranslationMessages_sv.properties
+++ b/src/main/resources/msgs/TranslationMessages_sv.properties
@@ -181,6 +181,7 @@ language.de=tyska
 language.en=engelska
 language.pl=polska
 language.cs=tjeckiska
+language.fr=franska
 
 lastlogins.title = Anv\u00E4ndarnas senaste inloggningar
 
