recalculating point on points config change

--- a/src/main/resources/msgs/TranslationMessages_ca.properties
+++ b/src/main/resources/msgs/TranslationMessages_ca.properties
@@ -180,7 +180,7 @@ language.de=alemany
 language.en=angl\u00E8s
 language.pl=polon\u00E8s
 language.es=espa\u00F1ol
-language.fr=franc\u00e8s
+language.fr=franc\u00E8s
 lastlogins.title = \u00DAltims inicis de sessi\u00F3 dels usuaris
 
 login.autologin.tooltip = Amb l'inici de sessi\u00F3 autom\u00E0tic habilitat, no heu de tornar a iniciar sessi\u00F3 si la sessi\u00F3 de l'usuari ha expirat.
@@ -410,7 +410,6 @@ points.config.pointsCorrectWinner=guanyador correcte
 points.config.pointsCorrectNumberOfGoalsOneTeam=nombre correcte de gols
 points.config.saved=La configuraci\u00F3 de punts s'ha desat!
 points.config.reset.defaults=restablir al valor predeterminat
-points.config.hintForChange=Assegureu-vos de no canviar la configuraci\u00F3 de punts despr\u00E9s d'haver comen\u00E7at cap partit! No hi haur\u00E0 cap rec\u00E0lcul de punts quan canvi\u00EF la configuraci\u00F3!
 testdata.teambundle=Paquet d'equip
 testdata.numberOfGroups=Nombre de grups
 testdata.includeBets=crear apostes
