--- a/src/main/resources/msgs/TranslationMessages_de.properties
+++ b/src/main/resources/msgs/TranslationMessages_de.properties
@@ -183,7 +183,7 @@ language.de = deutsch
 language.en = englisch
 language.pl = polnisch
 language.cs = tschechisch
-language.fr = französisch
+language.fr = franz\u00F6sisch
 
 lastlogins.title = Letzte Logins der Benutzer
 
@@ -415,7 +415,6 @@ points.config.pointsCorrectWinner=richtige Gewinner
 points.config.pointsCorrectNumberOfGoalsOneTeam=richtige Anzahl Tore
 points.config.saved=Die Punktekonfiguration wurde gespeichert!
 points.config.reset.defaults=auf Defaults zur\u00FCcksetzen
-points.config.hintForChange=Bitte keine Konfigurations\u00E4nderungen nach Spielbeginn t\u00E4tigen. Es wird keine erneute Punkteberechnung durchgef\u00FChrt!
 testdata.teambundle=Team Bundle
 testdata.numberOfGroups=Anzahl Gruppen
 testdata.includeBets=Tips erzeugen
