--- a/src/main/resources/msgs/TranslationMessages_es.properties
+++ b/src/main/resources/msgs/TranslationMessages_es.properties
@@ -182,7 +182,7 @@ language.pl=polaco
 language.es=espa\u00F1ol
 language.ca=catal\u00E0
 language.cs=checo
-language.fr=franc\u00e9s
+language.fr=franc\u00E9s
 
 lastlogins.title = \u00DAltimos inicios de sesi\u00F3n de los usuarios
 
@@ -411,7 +411,6 @@ points.config.reset.defaults=restablecer a los valores predeterminados
 points.config.saved=\u00A1La configuraci\u00F3n de puntos ha sido guardada!
 points.config.subtitle=Tanteo
 points.config.title=Configuraci\u00F3n de puntos
-points.config.hintForChange=\u00A1Aseg\u00FArate de no cambiar la configuraci\u00F3n de puntos despu\u00E9s de que comience el partido! No se volver\u00E1n a calcular los puntos al cambiar la configuraci\u00F3n.
 administration.runtime.configuration.presets=Preajustes
 administration.testdata.tooManyGroups=S\u00F3lo se pueden crear {0} grupos
 teamBundle.CLUB_WM=Mundial de Clubes
