--- a/src/main/resources/msgs/TranslationMessages_ca.properties
+++ b/src/main/resources/msgs/TranslationMessages_ca.properties
@@ -419,4 +419,5 @@ administration.msg.info.demoDataCreated=Es van crear les dades de la prova
 teamBundle.WORLD_CUP=Copa del M\u00F3n
 teamBundle.CLUB_WM=Copa del M\u00F3n de Clubs
 administration.runtime.configuration.presets=Presets
+importexport.usersOnly=nom\u00E9s dades d'usuari
 
