--- a/src/main/resources/msgs/TranslationMessages_cs.properties
+++ b/src/main/resources/msgs/TranslationMessages_cs.properties
@@ -422,3 +422,4 @@ testdata.includeResults=vytv\u00E1\u0159et v\u00FDsledky
 testdata.numberOfGroups=Po\u010Det skupin
 testdata.teambundle=T\u00FDmov\u00FD bal\u00ED\u010Dek
 administration.msg.info.demoDataCreated=Testovac\u00ED data byla vytvo\u0159ena
+importexport.usersOnly=pouze u\u017Eivatelsk\u00E1 data
