--- a/src/main/resources/msgs/TranslationMessages_de.properties
+++ b/src/main/resources/msgs/TranslationMessages_de.properties
@@ -424,3 +424,4 @@ administration.msg.info.demoDataCreated=Die Testdaten wurden angelegt
 teamBundle.WORLD_CUP=Weltmeisterschaft
 teamBundle.CLUB_WM=Klub WM
 administration.runtime.configuration.presets=Voreinstellungen
+importexport.usersOnly=nur Benutzerdaten
