--- a/src/main/resources/msgs/TranslationMessages_en.properties
+++ b/src/main/resources/msgs/TranslationMessages_en.properties
@@ -422,3 +422,4 @@ testdata.includeResults=create results
 testdata.numberOfGroups=Number of Groups
 testdata.teambundle=Team Bundle
 administration.msg.info.demoDataCreated=The test data has been created
+importexport.usersOnly=user data only
