--- a/src/main/resources/msgs/TranslationMessages_es.properties
+++ b/src/main/resources/msgs/TranslationMessages_es.properties
@@ -420,3 +420,4 @@ testdata.includeResults=crear resultados
 testdata.numberOfGroups=N\u00FAmero de grupos
 testdata.teambundle=Paquete de equipo
 administration.msg.info.demoDataCreated=Se crearon los datos de prueba
+importexport.usersOnly=solo datos de usuario
