--- a/src/main/resources/msgs/TranslationMessages_fr.properties
+++ b/src/main/resources/msgs/TranslationMessages_fr.properties
@@ -423,3 +423,4 @@ testdata.includeResults=Cr\u00E9er des r\u00E9sultats
 testdata.numberOfGroups=Nombre de groupes
 testdata.teambundle=Groupe d'\u00E9quipes
 administration.msg.info.demoDataCreated=Les donn\u00E9es de test ont \u00E9t\u00E9 cr\u00E9\u00E9es
+importexport.usersOnly=donn\u00E9es utilisateur uniquement
