--- a/src/main/resources/msgs/TranslationMessages_pl.properties
+++ b/src/main/resources/msgs/TranslationMessages_pl.properties
@@ -423,3 +423,4 @@ testdata.includeResults=tworzy\u0107 rezultaty
 testdata.numberOfGroups=Liczba grup
 testdata.teambundle=Pakiet dru\u017Cynowy
 administration.msg.info.demoDataCreated=Dane testowe zosta\u0142y utworzone
+importexport.usersOnly=tylko dane u\u017Cytkownika
