--- a/src/main/resources/msgs/TranslationMessages_sv.properties
+++ b/src/main/resources/msgs/TranslationMessages_sv.properties
@@ -421,3 +421,4 @@ testdata.includeResults=skapa resultat
 testdata.numberOfGroups=Antal grupper
 testdata.teambundle=Lagpaket
 administration.msg.info.demoDataCreated=Testdata skapades
+importexport.usersOnly=endast anv\u00E4ndardata
