added team bundle for european championship

--- a/src/main/resources/msgs/TranslationMessages_ca.properties
+++ b/src/main/resources/msgs/TranslationMessages_ca.properties
@@ -409,6 +409,7 @@ administration.testdata.tooManyGroups=Nom\u00E9s es poden crear {0} grups
 administration.msg.info.demoDataCreated=Es van crear les dades de la prova
 teamBundle.WORLD_CUP=Copa del M\u00F3n
 teamBundle.CLUB_WM=Copa del M\u00F3n de Clubs
+teamBundle.EUROPEAN_CHAMPIONSHIP=Campionat d'Europa
 administration.runtime.configuration.presets=Presets
 importexport.usersOnly=nom\u00E9s dades d'usuari
 
