--- a/src/main/resources/msgs/TranslationMessages_de.properties
+++ b/src/main/resources/msgs/TranslationMessages_de.properties
@@ -416,3 +416,4 @@ teamBundle.WORLD_CUP=Weltmeisterschaft
 teamBundle.CLUB_WM=Klub WM
 administration.runtime.configuration.presets=Voreinstellungen
 importexport.usersOnly=nur Benutzerdaten
+teamBundle.EUROPEAN_CHAMPIONSHIP=Europameisterschaft
