--- a/src/main/resources/msgs/TranslationMessages_en.properties
+++ b/src/main/resources/msgs/TranslationMessages_en.properties
@@ -414,3 +414,4 @@ testdata.numberOfGroups=Number of Groups
 testdata.teambundle=Team Bundle
 administration.msg.info.demoDataCreated=The test data has been created
 importexport.usersOnly=user data only
+teamBundle.EUROPEAN_CHAMPIONSHIP=European Championship
