--- a/src/main/resources/msgs/TranslationMessages_es.properties
+++ b/src/main/resources/msgs/TranslationMessages_es.properties
@@ -412,3 +412,4 @@ testdata.numberOfGroups=N\u00FAmero de grupos
 testdata.teambundle=Paquete de equipo
 administration.msg.info.demoDataCreated=Se crearon los datos de prueba
 importexport.usersOnly=solo datos de usuario
+teamBundle.EUROPEAN_CHAMPIONSHIP=Campeonato de Europa
