--- a/src/main/resources/msgs/TranslationMessages_pl.properties
+++ b/src/main/resources/msgs/TranslationMessages_pl.properties
@@ -415,3 +415,4 @@ testdata.numberOfGroups=Liczba grup
 testdata.teambundle=Pakiet dru\u017Cynowy
 administration.msg.info.demoDataCreated=Dane testowe zosta\u0142y utworzone
 importexport.usersOnly=tylko dane u\u017Cytkownika
+teamBundle.EUROPEAN_CHAMPIONSHIP=Mistrzostwa Europy
