--- a/src/main/resources/msgs/TranslationMessages_sv.properties
+++ b/src/main/resources/msgs/TranslationMessages_sv.properties
@@ -413,3 +413,4 @@ testdata.numberOfGroups=Antal grupper
 testdata.teambundle=Lagpaket
 administration.msg.info.demoDataCreated=Testdata skapades
 importexport.usersOnly=endast anv\u00E4ndardata
+teamBundle.EUROPEAN_CHAMPIONSHIP=EM
