added group of 32

--- a/src/main/resources/msgs/TranslationMessages_ca.properties
+++ b/src/main/resources/msgs/TranslationMessages_ca.properties
@@ -412,4 +412,5 @@ teamBundle.CLUB_WM=Copa del M\u00F3n de Clubs
 teamBundle.EUROPEAN_CHAMPIONSHIP=Campionat d'Europa
 administration.runtime.configuration.presets=Presets
 importexport.usersOnly=nom\u00E9s dades d'usuari
+group.title.roundOfThirtyTwo=Ronda de 32
 
