--- a/src/main/resources/msgs/TranslationMessages_de.properties
+++ b/src/main/resources/msgs/TranslationMessages_de.properties
@@ -417,3 +417,4 @@ teamBundle.CLUB_WM=Klub WM
 administration.runtime.configuration.presets=Voreinstellungen
 importexport.usersOnly=nur Benutzerdaten
 teamBundle.EUROPEAN_CHAMPIONSHIP=Europameisterschaft
+group.title.roundOfThirtyTwo=Sechzehntelfinale
