--- a/src/main/resources/msgs/TranslationMessages_en.properties
+++ b/src/main/resources/msgs/TranslationMessages_en.properties
@@ -415,3 +415,4 @@ testdata.teambundle=Team Bundle
 administration.msg.info.demoDataCreated=The test data has been created
 importexport.usersOnly=user data only
 teamBundle.EUROPEAN_CHAMPIONSHIP=European Championship
+group.title.roundOfThirtyTwo=Round of Thirty Two
