--- a/src/main/resources/msgs/TranslationMessages_es.properties
+++ b/src/main/resources/msgs/TranslationMessages_es.properties
@@ -413,3 +413,4 @@ testdata.teambundle=Paquete de equipo
 administration.msg.info.demoDataCreated=Se crearon los datos de prueba
 importexport.usersOnly=solo datos de usuario
 teamBundle.EUROPEAN_CHAMPIONSHIP=Campeonato de Europa
+group.title.roundOfThirtyTwo=Dieciseisavos de final
