--- a/src/main/resources/msgs/TranslationMessages_pl.properties
+++ b/src/main/resources/msgs/TranslationMessages_pl.properties
@@ -416,3 +416,4 @@ testdata.teambundle=Pakiet dru\u017Cynowy
 administration.msg.info.demoDataCreated=Dane testowe zosta\u0142y utworzone
 importexport.usersOnly=tylko dane u\u017Cytkownika
 teamBundle.EUROPEAN_CHAMPIONSHIP=Mistrzostwa Europy
+group.title.roundOfThirtyTwo=Runda 32
