--- a/src/main/resources/msgs/TranslationMessages_cs.properties
+++ b/src/main/resources/msgs/TranslationMessages_cs.properties
@@ -415,3 +415,4 @@ testdata.teambundle=T\u00FDmov\u00FD bal\u00ED\u010Dek
 administration.msg.info.demoDataCreated=Testovac\u00ED data byla vytvo\u0159ena
 importexport.usersOnly=pouze u\u017Eivatelsk\u00E1 data
 teamBundle.EUROPEAN_CHAMPIONSHIP=mistrovstv\u00ED Evropy
+group.title.roundOfThirtyTwo=Kolo 32
