--- a/src/main/resources/msgs/TranslationMessages_fr.properties
+++ b/src/main/resources/msgs/TranslationMessages_fr.properties
@@ -416,3 +416,4 @@ testdata.teambundle=Groupe d'\u00E9quipes
 administration.msg.info.demoDataCreated=Les donn\u00E9es de test ont \u00E9t\u00E9 cr\u00E9\u00E9es
 importexport.usersOnly=donn\u00E9es utilisateur uniquement
 teamBundle.EUROPEAN_CHAMPIONSHIP=Championnat d'Europe
+group.title.roundOfThirtyTwo=Seizi\u00E8mes de finale
