--- a/src/main/resources/msgs/TranslationMessages_de.properties
+++ b/src/main/resources/msgs/TranslationMessages_de.properties
@@ -410,6 +410,7 @@ testdata.teambundle=Team Bundle
 testdata.numberOfGroups=Anzahl Gruppen
 testdata.includeBets=Tips erzeugen
 testdata.includeResults=Ergebnisse erzeugen
+testdata.createGameOfThird=Spiel um den 3ten Platz erzeugen
 administration.msg.info.demoDataCreated=Die Testdaten wurden angelegt
 teamBundle.WORLD_CUP=Weltmeisterschaft
 teamBundle.CLUB_WM=Klub WM
