--- a/src/main/resources/msgs/TranslationMessages_ca.properties
+++ b/src/main/resources/msgs/TranslationMessages_ca.properties
@@ -412,4 +412,5 @@ teamBundle.EUROPEAN_CHAMPIONSHIP=Campionat d'Europa
 administration.runtime.configuration.presets=Presets
 importexport.usersOnly=nom\u00E9s dades d'usuari
 group.title.roundOfThirtyTwo=Ronda de 32
+testdata.createGameOfThird=crear una partida de 3r
 
