--- a/src/main/resources/msgs/TranslationMessages_sv.properties
+++ b/src/main/resources/msgs/TranslationMessages_sv.properties
@@ -414,3 +414,4 @@ administration.msg.info.demoDataCreated=Testdata skapades
 importexport.usersOnly=endast anv\u00E4ndardata
 teamBundle.EUROPEAN_CHAMPIONSHIP=EM
 group.title.roundOfThirtyTwo=Omg\u00E5ng 32
+testdata.createGameOfThird=skapa ett tredje spel
