user can set dark mode

--- a/src/main/resources/msgs/TranslationMessages_ca.properties
+++ b/src/main/resources/msgs/TranslationMessages_ca.properties
@@ -413,4 +413,5 @@ administration.runtime.configuration.presets=Presets
 importexport.usersOnly=nom\u00E9s dades d'usuari
 group.title.roundOfThirtyTwo=Ronda de 32
 testdata.createGameOfThird=crear una partida de 3r
+user.setting.darkMode=Dark Mode
 
