--- a/src/main/resources/msgs/TranslationMessages_en.properties
+++ b/src/main/resources/msgs/TranslationMessages_en.properties
@@ -416,3 +416,5 @@ importexport.usersOnly=user data only
 teamBundle.EUROPEAN_CHAMPIONSHIP=European Championship
 group.title.roundOfThirtyTwo=Round of Thirty Two
 testdata.createGameOfThird=create game of 3rd
+user.setting.title=User Settings
+user.setting.darkMode=Dark Mode
