--- a/src/main/resources/msgs/TranslationMessages_es.properties
+++ b/src/main/resources/msgs/TranslationMessages_es.properties
@@ -414,3 +414,4 @@ importexport.usersOnly=solo datos de usuario
 teamBundle.EUROPEAN_CHAMPIONSHIP=Campeonato de Europa
 group.title.roundOfThirtyTwo=Dieciseisavos de final
 testdata.createGameOfThird=crear juego de 3\u00BA
+user.setting.darkMode=Dark Mode
