--- a/src/main/resources/msgs/TranslationMessages_fr.properties
+++ b/src/main/resources/msgs/TranslationMessages_fr.properties
@@ -417,3 +417,4 @@ importexport.usersOnly=donn\u00E9es utilisateur uniquement
 teamBundle.EUROPEAN_CHAMPIONSHIP=Championnat d'Europe
 group.title.roundOfThirtyTwo=Seizi\u00E8mes de finale
 testdata.createGameOfThird=cr\u00E9er un jeu de 3\u00E8me
+user.setting.darkMode=Dark Mode
