--- a/src/main/resources/msgs/TranslationMessages_pl.properties
+++ b/src/main/resources/msgs/TranslationMessages_pl.properties
@@ -417,3 +417,4 @@ importexport.usersOnly=tylko dane u\u017Cytkownika
 teamBundle.EUROPEAN_CHAMPIONSHIP=Mistrzostwa Europy
 group.title.roundOfThirtyTwo=Runda 32
 testdata.createGameOfThird=cr\u00E9er un jeu de 3\u00E8me
+user.setting.darkMode=Dark Mode
