--- a/src/main/resources/msgs/TranslationMessages_cs.properties
+++ b/src/main/resources/msgs/TranslationMessages_cs.properties
@@ -416,3 +416,4 @@ importexport.usersOnly=pouze u\u017Eivatelsk\u00E1 data
 teamBundle.EUROPEAN_CHAMPIONSHIP=mistrovstv\u00ED Evropy
 group.title.roundOfThirtyTwo=Kolo 32
 testdata.createGameOfThird=vytvo\u0159it hru t\u0159et\u00EDho stupn\u011B
+user.setting.darkMode=Dark Mode
