--- a/src/main/resources/msgs/TranslationMessages_de.properties
+++ b/src/main/resources/msgs/TranslationMessages_de.properties
@@ -418,3 +418,6 @@ administration.runtime.configuration.presets=Voreinstellungen
 importexport.usersOnly=nur Benutzerdaten
 teamBundle.EUROPEAN_CHAMPIONSHIP=Europameisterschaft
 group.title.roundOfThirtyTwo=Sechzehntelfinale
+user.setting.title=Benutzereinstellungen
+user.setting.darkMode=Dark Mode
+user.setting.updated=Die Benutzereinstellungen wurden aktualisiert.
