--- a/src/main/resources/msgs/TranslationMessages_ca.properties
+++ b/src/main/resources/msgs/TranslationMessages_ca.properties
@@ -413,5 +413,7 @@ administration.runtime.configuration.presets=Presets
 importexport.usersOnly=nom\u00E9s dades d'usuari
 group.title.roundOfThirtyTwo=Ronda de 32
 testdata.createGameOfThird=crear una partida de 3r
-user.setting.darkMode=Dark Mode
+user.setting.darkMode=Mode fosc
+user.setting.title=Configuraci\u00F3 de l'usuari
+user.setting.updated=La configuraci\u00F3 de l'usuari s'ha actualitzat.
 
