--- a/src/main/resources/msgs/TranslationMessages_en.properties
+++ b/src/main/resources/msgs/TranslationMessages_en.properties
@@ -418,3 +418,4 @@ group.title.roundOfThirtyTwo=Round of Thirty Two
 testdata.createGameOfThird=create game of 3rd
 user.setting.title=User Settings
 user.setting.darkMode=Dark Mode
+user.setting.updated=User settings has been updated.
