--- a/src/main/resources/msgs/TranslationMessages_pl.properties
+++ b/src/main/resources/msgs/TranslationMessages_pl.properties
@@ -417,4 +417,6 @@ importexport.usersOnly=tylko dane u\u017Cytkownika
 teamBundle.EUROPEAN_CHAMPIONSHIP=Mistrzostwa Europy
 group.title.roundOfThirtyTwo=Runda 32
 testdata.createGameOfThird=cr\u00E9er un jeu de 3\u00E8me
-user.setting.darkMode=Dark Mode
+user.setting.darkMode=Tryb ciemny
+user.setting.title=Ustawienia u\u017Cytkownika
+user.setting.updated=Ustawienia u\u017Cytkownika zosta\u0142y zaktualizowane.
