--- a/src/main/resources/msgs/TranslationMessages_sv.properties
+++ b/src/main/resources/msgs/TranslationMessages_sv.properties
@@ -415,4 +415,6 @@ importexport.usersOnly=endast anv\u00E4ndardata
 teamBundle.EUROPEAN_CHAMPIONSHIP=EM
 group.title.roundOfThirtyTwo=Omg\u00E5ng 32
 testdata.createGameOfThird=skapa ett tredje spel
-user.setting.darkMode=Dark Mode
+user.setting.darkMode=M\u00F6rkt l\u00E4ge
+user.setting.title=Anv\u00E4ndarinst\u00E4llningar
+user.setting.updated=Anv\u00E4ndarinst\u00E4llningarna har uppdaterats.
