--- a/src/main/resources/msgs/TranslationMessages_cs.properties
+++ b/src/main/resources/msgs/TranslationMessages_cs.properties
@@ -416,4 +416,6 @@ importexport.usersOnly=pouze u\u017Eivatelsk\u00E1 data
 teamBundle.EUROPEAN_CHAMPIONSHIP=mistrovstv\u00ED Evropy
 group.title.roundOfThirtyTwo=Kolo 32
 testdata.createGameOfThird=vytvo\u0159it hru t\u0159et\u00EDho stupn\u011B
-user.setting.darkMode=Dark Mode
+user.setting.darkMode=Tmav\u00FD re\u017Eim
+user.setting.title=U\u017Eivatelsk\u00E1 nastaven\u00ED
+user.setting.updated=U\u017Eivatelsk\u00E9 nastaven\u00ED bylo aktualizov\u00E1no.
