--- a/src/main/resources/msgs/TranslationMessages_es.properties
+++ b/src/main/resources/msgs/TranslationMessages_es.properties
@@ -414,4 +414,6 @@ importexport.usersOnly=solo datos de usuario
 teamBundle.EUROPEAN_CHAMPIONSHIP=Campeonato de Europa
 group.title.roundOfThirtyTwo=Dieciseisavos de final
 testdata.createGameOfThird=crear juego de 3\u00BA
-user.setting.darkMode=Dark Mode
+user.setting.darkMode=Modo oscuro
+user.setting.title=Configuraci\u00F3n de usuario
+user.setting.updated=Se ha actualizado la configuraci\u00F3n del usuario.
