--- a/src/main/resources/msgs/TranslationMessages_fr.properties
+++ b/src/main/resources/msgs/TranslationMessages_fr.properties
@@ -417,4 +417,6 @@ importexport.usersOnly=donn\u00E9es utilisateur uniquement
 teamBundle.EUROPEAN_CHAMPIONSHIP=Championnat d'Europe
 group.title.roundOfThirtyTwo=Seizi\u00E8mes de finale
 testdata.createGameOfThird=cr\u00E9er un jeu de 3\u00E8me
-user.setting.darkMode=Dark Mode
+user.setting.darkMode=Tryb ciemny
+user.setting.title=Param\u00E8tres utilisateur
+user.setting.updated=Les param\u00E8tres utilisateur ont \u00E9t\u00E9 mis \u00E0 jour.
