selecting bootswatch theme per user

--- a/src/main/resources/msgs/TranslationMessages_en.properties
+++ b/src/main/resources/msgs/TranslationMessages_en.properties
@@ -419,3 +419,4 @@ testdata.createGameOfThird=create game of 3rd
 user.setting.title=User Settings
 user.setting.darkMode=Dark Mode
 user.setting.updated=User settings has been updated.
+button.default=reset to defaults
