selecting bootswatch theme per user

--- a/src/main/resources/msgs/TranslationMessages_ca.properties
+++ b/src/main/resources/msgs/TranslationMessages_ca.properties
@@ -416,5 +416,5 @@ testdata.createGameOfThird=crear una partida de 3r
 user.setting.darkMode=Mode fosc
 user.setting.title=Configuraci\u00F3 de l'usuari
 user.setting.updated=La configuraci\u00F3 de l'usuari s'ha actualitzat.
-button.default=
+button.default=restablir els valors predeterminats
 
