--- a/src/main/resources/msgs/TranslationMessages_fr.properties
+++ b/src/main/resources/msgs/TranslationMessages_fr.properties
@@ -420,3 +420,4 @@ testdata.createGameOfThird=cr\u00E9er un jeu de 3\u00E8me
 user.setting.darkMode=Tryb ciemny
 user.setting.title=Param\u00E8tres utilisateur
 user.setting.updated=Les param\u00E8tres utilisateur ont \u00E9t\u00E9 mis \u00E0 jour.
+button.default=r\u00E9initialiser aux param\u00E8tres par d\u00E9faut
