--- a/src/main/resources/msgs/TranslationMessages_cs.properties
+++ b/src/main/resources/msgs/TranslationMessages_cs.properties
@@ -419,3 +419,4 @@ testdata.createGameOfThird=vytvo\u0159it hru t\u0159et\u00EDho stupn\u011B
 user.setting.darkMode=Tmav\u00FD re\u017Eim
 user.setting.title=U\u017Eivatelsk\u00E1 nastaven\u00ED
 user.setting.updated=U\u017Eivatelsk\u00E9 nastaven\u00ED bylo aktualizov\u00E1no.
+button.default=obnovit na v\u00FDchoz\u00ED nastaven\u00ED
