--- a/src/main/resources/msgs/TranslationMessages_de.properties
+++ b/src/main/resources/msgs/TranslationMessages_de.properties
@@ -421,4 +421,4 @@ group.title.roundOfThirtyTwo=Sechzehntelfinale
 user.setting.title=Benutzereinstellungen
 user.setting.darkMode=Dark Mode
 user.setting.updated=Die Benutzereinstellungen wurden aktualisiert.
-button.default=auf Defaultwerte zur\u00FCcksetzen
+button.default=auf Default setzen
