--- a/src/main/resources/msgs/TranslationMessages_es.properties
+++ b/src/main/resources/msgs/TranslationMessages_es.properties
@@ -417,3 +417,4 @@ testdata.createGameOfThird=crear juego de 3\u00BA
 user.setting.darkMode=Modo oscuro
 user.setting.title=Configuraci\u00F3n de usuario
 user.setting.updated=Se ha actualizado la configuraci\u00F3n del usuario.
+button.default=restablecer valores predeterminados
