--- a/src/main/resources/msgs/TranslationMessages_pl.properties
+++ b/src/main/resources/msgs/TranslationMessages_pl.properties
@@ -420,3 +420,4 @@ testdata.createGameOfThird=cr\u00E9er un jeu de 3\u00E8me
 user.setting.darkMode=Tryb ciemny
 user.setting.title=Ustawienia u\u017Cytkownika
 user.setting.updated=Ustawienia u\u017Cytkownika zosta\u0142y zaktualizowane.
+button.default=przywr\u00F3\u0107 ustawienia domy\u015Blne
