--- a/src/main/resources/msgs/TranslationMessages_ca.properties
+++ b/src/main/resources/msgs/TranslationMessages_ca.properties
@@ -417,4 +417,6 @@ user.setting.darkMode=Mode fosc
 user.setting.title=Configuraci\u00F3 de l'usuari
 user.setting.updated=La configuraci\u00F3 de l'usuari s'ha actualitzat.
 button.default=restablir els valors predeterminats
+login.logo.title=
+login.logo.deleted=
 
