--- a/src/main/resources/msgs/TranslationMessages_cs.properties
+++ b/src/main/resources/msgs/TranslationMessages_cs.properties
@@ -420,3 +420,5 @@ user.setting.darkMode=Tmav\u00FD re\u017Eim
 user.setting.title=U\u017Eivatelsk\u00E1 nastaven\u00ED
 user.setting.updated=U\u017Eivatelsk\u00E9 nastaven\u00ED bylo aktualizov\u00E1no.
 button.default=obnovit na v\u00FDchoz\u00ED nastaven\u00ED
+login.logo.title=Udr\u017Eovat p\u0159ihla\u0161ovac\u00ED logo
+login.logo.deleted=P\u0159ihla\u0161ovac\u00ED obr\u00E1zek byl smaz\u00E1n.
