--- a/src/main/resources/msgs/TranslationMessages_en.properties
+++ b/src/main/resources/msgs/TranslationMessages_en.properties
@@ -420,3 +420,5 @@ user.setting.title=User Settings
 user.setting.darkMode=Dark Mode
 user.setting.updated=User settings has been updated.
 button.default=reset to defaults
+login.logo.title=Maintain Login-Logo
+login.logo.deleted=The login image has been deleted.
