--- a/src/main/resources/msgs/TranslationMessages_de.properties
+++ b/src/main/resources/msgs/TranslationMessages_de.properties
@@ -422,5 +422,5 @@ user.setting.title=Benutzereinstellungen
 user.setting.darkMode=Dark Mode
 user.setting.updated=Die Benutzereinstellungen wurden aktualisiert.
 button.default=auf Default setzen
-login.logo.title=Login Logo verwalten
-login.logo.deleted=Login Logo wurde gel\u00F6scht.
+login.logo.title=Login-Logo verwalten
+login.logo.deleted=Das Login-Logo wurde gel\u00F6scht.
