--- a/src/main/resources/msgs/TranslationMessages_es.properties
+++ b/src/main/resources/msgs/TranslationMessages_es.properties
@@ -418,3 +418,5 @@ user.setting.darkMode=Modo oscuro
 user.setting.title=Configuraci\u00F3n de usuario
 user.setting.updated=Se ha actualizado la configuraci\u00F3n del usuario.
 button.default=restablecer valores predeterminados
+login.logo.title=Mantener el logotipo de inicio de sesi\u00F3n
+login.logo.deleted=Se ha eliminado la imagen de inicio de sesi\u00F3n.
