--- a/src/main/resources/msgs/TranslationMessages_fr.properties
+++ b/src/main/resources/msgs/TranslationMessages_fr.properties
@@ -421,3 +421,5 @@ user.setting.darkMode=Tryb ciemny
 user.setting.title=Param\u00E8tres utilisateur
 user.setting.updated=Les param\u00E8tres utilisateur ont \u00E9t\u00E9 mis \u00E0 jour.
 button.default=r\u00E9initialiser aux param\u00E8tres par d\u00E9faut
+login.logo.title=Logo de connexion conserv\u00E9
+login.logo.deleted=L'image de connexion a \u00E9t\u00E9 supprim\u00E9e.
