--- a/src/main/resources/msgs/TranslationMessages_pl.properties
+++ b/src/main/resources/msgs/TranslationMessages_pl.properties
@@ -421,3 +421,5 @@ user.setting.darkMode=Tryb ciemny
 user.setting.title=Ustawienia u\u017Cytkownika
 user.setting.updated=Ustawienia u\u017Cytkownika zosta\u0142y zaktualizowane.
 button.default=przywr\u00F3\u0107 ustawienia domy\u015Blne
+login.logo.title=Utrzymaj logo logowania
+login.logo.deleted=Obraz logowania zosta\u0142 usuni\u0119ty.
