--- a/src/main/resources/msgs/TranslationMessages_sv.properties
+++ b/src/main/resources/msgs/TranslationMessages_sv.properties
@@ -419,3 +419,5 @@ user.setting.darkMode=M\u00F6rkt l\u00E4ge
 user.setting.title=Anv\u00E4ndarinst\u00E4llningar
 user.setting.updated=Anv\u00E4ndarinst\u00E4llningarna har uppdaterats.
 button.default=\u00E5terst\u00E4ll till standardinst\u00E4llningar
+login.logo.title=Beh\u00E5ll inloggningslogotypen
+login.logo.deleted=Inloggningsbilden har raderats.
