updated login logo

--- a/src/main/resources/msgs/TranslationMessages_de.properties
+++ b/src/main/resources/msgs/TranslationMessages_de.properties
@@ -424,3 +424,6 @@ user.setting.updated=Die Benutzereinstellungen wurden aktualisiert.
 button.default=auf Default setzen
 login.logo.title=Login-Logo verwalten
 login.logo.deleted=Das Login-Logo wurde gel\u00F6scht.
+login.logo.current=Es ist aktuell kein eigenes Login Logo hinterlegt.
+login.logo.current.title=Aktuelles Login Logo
+login.logo.update.title=Login Logo aktualisieren
