--- a/src/main/resources/msgs/TranslationMessages_en.properties
+++ b/src/main/resources/msgs/TranslationMessages_en.properties
@@ -422,3 +422,6 @@ user.setting.updated=User settings has been updated.
 button.default=reset to defaults
 login.logo.title=Maintain Login-Logo
 login.logo.deleted=The login image has been deleted.
+login.logo.current=There is no custom login logo defined.
+login.logo.current.title=Current Login Logo
+login.logo.update.title=Update Login Logo
