updated login logo

--- a/src/main/resources/msgs/TranslationMessages_cs.properties
+++ b/src/main/resources/msgs/TranslationMessages_cs.properties
@@ -422,3 +422,6 @@ user.setting.updated=U\u017Eivatelsk\u00E9 nastaven\u00ED bylo aktualizov\u00E1n
 button.default=obnovit na v\u00FDchoz\u00ED nastaven\u00ED
 login.logo.title=Udr\u017Eovat p\u0159ihla\u0161ovac\u00ED logo
 login.logo.deleted=P\u0159ihla\u0161ovac\u00ED obr\u00E1zek byl smaz\u00E1n.
+login.logo.current=Nen\u00ED definov\u00E1no \u017E\u00E1dn\u00E9 vlastn\u00ED p\u0159ihla\u0161ovac\u00ED logo.
+login.logo.current.title=Aktu\u00E1ln\u00ED logo pro p\u0159ihl\u00E1\u0161en\u00ED
+login.logo.update.title=Aktualizovat logo pro p\u0159ihl\u00E1\u0161en\u00ED
