--- a/src/main/resources/msgs/TranslationMessages_pl.properties
+++ b/src/main/resources/msgs/TranslationMessages_pl.properties
@@ -423,3 +423,6 @@ user.setting.updated=Ustawienia u\u017Cytkownika zosta\u0142y zaktualizowane.
 button.default=przywr\u00F3\u0107 ustawienia domy\u015Blne
 login.logo.title=Utrzymaj logo logowania
 login.logo.deleted=Obraz logowania zosta\u0142 usuni\u0119ty.
+login.logo.current=Nie zdefiniowano \u017Cadnego niestandardowego logo logowania.
+login.logo.current.title=Aktualne logo logowania
+login.logo.update.title=Aktualizuj logo logowania
