--- a/src/main/resources/msgs/TranslationMessages_sv.properties
+++ b/src/main/resources/msgs/TranslationMessages_sv.properties
@@ -421,3 +421,6 @@ user.setting.updated=Anv\u00E4ndarinst\u00E4llningarna har uppdaterats.
 button.default=\u00E5terst\u00E4ll till standardinst\u00E4llningar
 login.logo.title=Beh\u00E5ll inloggningslogotypen
 login.logo.deleted=Inloggningsbilden har raderats.
+login.logo.current=Det finns ingen anpassad inloggningslogotyp definierad.
+login.logo.current.title=Nuvarande inloggningslogotyp
+login.logo.update.title=Uppdatera inloggningslogotyp
