--- a/src/main/resources/msgs/TranslationMessages_es.properties
+++ b/src/main/resources/msgs/TranslationMessages_es.properties
@@ -420,3 +420,6 @@ user.setting.updated=Se ha actualizado la configuraci\u00F3n del usuario.
 button.default=restablecer valores predeterminados
 login.logo.title=Mantener el logotipo de inicio de sesi\u00F3n
 login.logo.deleted=Se ha eliminado la imagen de inicio de sesi\u00F3n.
+login.logo.current=No hay ning\u00FAn logotipo de inicio de sesi\u00F3n personalizado definido.
+login.logo.current.title=Logotipo de inicio de sesi\u00F3n actual
+login.logo.update.title=Actualizar el logotipo de inicio de sesi\u00F3n
