--- a/src/main/resources/msgs/TranslationMessages_fr.properties
+++ b/src/main/resources/msgs/TranslationMessages_fr.properties
@@ -423,3 +423,6 @@ user.setting.updated=Les param\u00E8tres utilisateur ont \u00E9t\u00E9 mis \u00E
 button.default=r\u00E9initialiser aux param\u00E8tres par d\u00E9faut
 login.logo.title=Logo de connexion conserv\u00E9
 login.logo.deleted=L'image de connexion a \u00E9t\u00E9 supprim\u00E9e.
+login.logo.current=Aucun logo de connexion personnalis\u00E9 n'est d\u00E9fini.
+login.logo.current.title=Logo de connexion actuel
+login.logo.update.title=Mettre \u00E0 jour le logo de connexion
