Feature/login logo update (#72)
* updated login logo

* updated login logo

* updated login logo

--- a/src/main/resources/msgs/TranslationMessages_ca.properties
+++ b/src/main/resources/msgs/TranslationMessages_ca.properties
@@ -419,4 +419,7 @@ user.setting.updated=La configuraci\u00F3 de l'usuari s'ha actualitzat.
 button.default=restablir els valors predeterminats
 login.logo.title=Mantenir el logotip d'inici de sessi\u00F3
 login.logo.deleted=La imatge d'inici de sessi\u00F3 s'ha suprimit.
+login.logo.current=No hi ha cap logotip d'inici de sessi\u00F3 personalitzat definit.
+login.logo.current.title=Logotip d'inici de sessi\u00F3 actual
+login.logo.update.title=Actualitza el logotip d'inici de sessi\u00F3
 
